Fixes for map component
- Fix marker icon not showing correctly
- Setup basic Dashboard component
- Render map in Dashboard
- Render Dashboard in App

--- a/client/src/Components/Map/Map.less
+++ b/client/src/Components/Map/Map.less
@@ -1,5 +1,4 @@
 .MapComponent {
-  height: 500px;
-  width: 500px;
+  height: 90vh;
+  width: 100vw;
 }
-
